test/fromW2.slq

def toW[n:!в„•]lifted:рќ”№^n в†’mfree рќ”№^nв‡’lambda(qs:рќ”№^n)mfree:рќ”№^n{
	if n==1{ qs[0]:=X(qs[0]); }
	else if n>1{
		Оё:=asin(1/sqrt(n));
		(([head] coerce рќ”№^1):рќ”№[])~((tail coerce рќ”№^(n sub 1)):рќ”№[]):=(qs:рќ”№[]);
		head:=rotY(Оё,head);
		if !head { tail := toW(tail); }
		qs:=[head]~(tail:рќ”№[]) coerce B^n;
	}
	return qs;
};

def fromW[n:!в„•]lifted:рќ”№^nв†’mfree рќ”№^nв‡’lambda(qs:рќ”№^n)mfree:рќ”№^n{
    if n = 1 {
        qs[0] := reverse(X)(qs[0]);
    } else if n > 1 {
        Оё := asin(1 / sqrt(n));
        __tmp2 := qs coerce рќ”№[];
        (head,) := dup(__tmp2[0..1]) coerce рќ”№^1;
        tail := dup(__tmp2[1..__tmp2.length]) coerce рќ”№^((n sub 1));
        forget(__tmp2=[head] ~ (tail: рќ”№[])); /// error
        if В¬head {
            tail := fromW(tail);
        }
        head := reverse(rotY)(Оё,head);
        __tmp0 := dup((([head] coerce рќ”№ ^ 1): рќ”№[]) ~ ((tail coerce рќ”№ ^ (n sub 1)): рќ”№[]));
        forget(tail=(__tmp0[1..__tmp0.length]: рќ”№[]) coerce рќ”№ ^ (n sub 1));
        forget((head,)=(__tmp0[0..1]: рќ”№[]) coerce рќ”№ ^ 1);
        qs := __tmp0 coerce рќ”№^n;
    }
    return qs;
};

def solve(qs:рќ”№^3):!рќ”№{
	if qs[1]{ phase(-2В·ПЂ/3); }
	if qs[2]{ phase(-4В·ПЂ/3); }
	qs:=fromW(qs);
 	return measure(qs as int[3])!=0;
}
def main(){
	qs:=toW(vector(3,0:рќ”№));
	if qs[1]{ phase(2В·ПЂ/3); }
	if qs[2]{ phase(4В·ПЂ/3); }
	assert(!solve(qs));
}
